trying to fix clipping

--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -40,11 +40,11 @@
 .user-details {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
-  font-size: 18px;
+  font-size: 16px;
   display: block;
   margin-top: 10px;
   @media only screen and (min-width:$cut){
-    font-size: 24px;
+    font-size: 18px;
   }
 }
 
