--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -151,7 +151,7 @@
 
   max-height: 40vh;   // 👈 limits the div’s vertical space
   overflow: hidden;    // 👈 prevents overflow if image is bigger
-  margin: 30px;   // 👈 optional: adds spacing if needed
+  margin: 50px;   // 👈 optional: adds spacing if needed
 }
 
 .header-image img {
